k8s/wordpress/ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: press
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/redirect-regex: ^/(.*)
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /myadmin/(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: myadmin-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
